force-app/main/default/objects/Job_Position__c/Job_Position__c.object-meta.xml
<CustomObject>
    <label>Job Position</label>
    <pluralLabel>Job Positions</pluralLabel>
    <nameField>
        <label>Position Title</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Stores job position records for open, on-hold, and closed requisitions managed by the HR Suite.</description>
</CustomObject>