force-app/main/default/objects/Job_Position__c/fields/Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Manager__c</fullName>
    <label>Hiring Manager</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Positions</relationshipName>
    <description>The Salesforce User responsible for reviewing and approving candidates for this job position. Required enforcement is handled via Validation Rule to allow safe User deactivation (Salesforce does not permit Restrict delete constraint on User lookups).</description>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>