force-app/main/default/objects/Job_Position__c/fields/Max_Budget__c.field-meta.xml
<CustomField>
    <fullName>Max_Budget__c</fullName>
    <label>Max Budget (LPA)</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <description>The maximum annual salary budget (in Lakhs Per Annum) approved for this job position.</description>
    <defaultValue></defaultValue>
</CustomField>