force-app/main/default/objects/Job_Position__c/fields/Min_Experience__c.field-meta.xml
<CustomField>
    <fullName>Min_Experience__c</fullName>
    <label>Min Experience (Yrs)</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <description>The minimum number of years of relevant professional experience required for this job position.</description>
    <defaultValue></defaultValue>
</CustomField>