force-app/main/default/objects/Job_Position__c/fields/Openings__c.field-meta.xml
<CustomField>
    <fullName>Openings__c</fullName>
    <label>Number of Openings</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <required>true</required>
    <description>The total number of headcount slots approved for this job position. Min: 1</description>
    <defaultValue></defaultValue>
</CustomField>