force-app/main/default/objects/Job_Position__c/fields/Target_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Closure_Date__c</fullName>
    <label>Target Closure Date</label>
    <type>Date</type>
    <description>The target date by which this job position should be filled and the requisition closed.</description>
    <defaultValue></defaultValue>
</CustomField>